Switch to `CommonUtil` and refactor method calls for consistency.
Replaced usages of `StringUtils` with `CommonUtil` and updated methods for improved readability and modernized coding conventions. Bumped version in relevant `pom.xml` files to ensure compatibility, streamlined code paths using `getFirst()` replacements, and adjusted dependency scopes for better package management.