@@ -52,7 +52,7 @@ public class SubCommand_TransferOwnership implements CommandHandler<Player> {
     }
 
     if(parser.getArgs().size() == 1) {
-      switch(parser.getArgs().get(0)) {
+      switch(parser.getArgs().getFirst()) {
         case "accept", "allow", "yes" -> {
           final ShopUtil.PendingTransferTask task = taskCache.getIfPresent(sender.getUniqueId());
           taskCache.invalidate(sender.getUniqueId());
@@ -81,7 +81,7 @@ public class SubCommand_TransferOwnership implements CommandHandler<Player> {
             plugin.text().of(sender, "no-permission").send();
             return;
           }
-          final String name = parser.getArgs().get(0);
+          final String name = parser.getArgs().getFirst();
           plugin.getPlayerFinder().name2UuidFuture(name).whenComplete((uuid, throwable)->{
             if(uuid == null) {
               plugin.text().of(sender, "unknown-player").send();
